Cloud images no longer cut off on 4K, other fixes

--- a/_custom/sparklite.less
+++ b/_custom/sparklite.less
@@ -200,7 +200,7 @@ p {
   width: 100vw;
   text-align: center;
   position: absolute;
-  bottom: 7vh;
+  bottom: 9.5vh;
 
   -webkit-animation-duration: 0.5s;
   -webkit-animation-delay: 2.5s;
@@ -217,72 +217,77 @@ p {
   position: absolute;
   text-align: center;
   width: 100vw;
-  min-height: 100vh;
   top: -55vh;
+
+  @media (max-height: @screen-sm) {
+    top: -58vh;
+  }
+
+  // Only shows on small square (keyboard + mobile)
+  @media (max-height: @screen-xs) {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
 
 .cloud-fill {
   color: @color-brown;
   background-color: @color-clouds;
-  min-height: 30vh;
-  line-height: 100%;
-  padding: 7% 25% 3% 25%;
+  min-height: 40vh;
+  padding: 5% 5% 5% 5%;
 
-  @media (max-height: @screen-xs)
-  {
-    margin: 0 5% 0 5%;
+  .cloud-fill-center {
+    max-width: 80vw;
+    .center-block();
+
+    @media (min-width: @screen-lg) {
+      max-width: 40vw;
+    }
+  }
+
+  @media (min-width: @screen-lg) {
+    min-height: 42vh;
+    font-size: 1.2em;
+  }
+
+  @media (max-height: @screen-xs) {
+    font-size: 1em;
     border-radius: 15px;
   }
 
-  &p {
-    font-size: @font-size-medium;
-    padding: 2vh 0vw 2vh 0vw;
-  }
-
-  @media (min-width: @screen-xl) {
-    padding: 5% 35% 5% 35%;
-  }
-
-  @media (max-width: @screen-xs) {
+  .cloud-text {
     padding: 5% 5% 5% 5%;
-    font-size: 1em;
   }
 }
 
-.cloud-top {
-  background-image: url('/assets/sparklite/clouds-top.png');
+.clouds {
   background-size: 100% auto;
   background-repeat: no-repeat;
-  background-position: center top;
-  height: 150px;
+  height: 160px;
 
-  @media (max-width: @screen-md){
-    background-size: auto;
+  @media(min-width: @screen-xl) {
+    height: 250px;
   }
-
-    // Clear out the clouds if the screen is too small vertically
-  @media (max-height: @screen-xs)
-  {
-    background-image: url('');
-  }
-}
-
-.cloud-bottom {
-  background-image: url('/assets/sparklite/clouds-bottom.png');
-  background-size: 100% auto;
-  height: 150px;
-  background-repeat: repeat-x;
-  background-position: center bottom;
 
   @media (max-width: @screen-md){
     background-size: auto;
   }
 
   // Clear out the clouds if the screen is too small vertically
-  @media (max-height: @screen-xs)
-  {
+  @media (max-height: @screen-xs) {
     background-image: url('');
   }
+}
+
+.cloud-top {
+  background-image: url('/assets/sparklite/clouds-top.png');
+  background-position: center top;
+}
+
+.cloud-bottom {
+  background-image: url('/assets/sparklite/clouds-bottom.png');
+  background-position: center bottom;
+  margin-top: -20px;
 }
 
 // Mailchimp / Newsletter
@@ -295,6 +300,7 @@ p {
   border: 5px solid @color-brown;
   padding: 0px 50px 40px 50px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.50);
+  min-height: 500px;
 
   @media (max-width: @screen-xs) {
     max-width: : 80vw;
